fix: 카테고리 기능 수정
1. GlobalExceptionHandler
- handleAccessDeniedException 추가

2. ErrorCode
- CATEGORY_IS_USED
- ALREADY_CATEGORY

3. CircularService
- StoreCategoryService 등록

4. CategoryController
- 권한 부여

5. CategoryService
- 에러 메시지 적용

6. StoreCategoryRepository
- existsByCategoryAndIsDeletedIsFalse 메서드 추가

7. StoreCategoryService
- existsByCategory 메서드 추가